Cart/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    height: 100vh;
    width: 100vw;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: black;
}

h1 {
    color: black;
    letter-spacing: 5px;
}

p {
    color: gray;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 15px 15px 40px 15px;
}

.header .cart-icon {
    position: absolute;
    right: 15px;
}

.cart {
    max-width: 800px;
    margin: 2rem auto;
    background: #fff;
    padding: 1rem;
}

.cart h2 {
    text-align: center;
    font-size: 1.25rem;
    margin-bottom: 0.5rem;
}

.cart p {
    text-align: center;
}

.cart-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 0;
    width: 100%;
}

.cart-item img {
    max-width: 100px;
    height: auto;
}

.item-details {
    display: flex;
    /* flex-direction: column; */
    width: 100%;
    gap: 60px;
    text-align: center;
}
.product-details {
    display: flex;
    gap: 15px;
}

.item-name {
    font-size: 1rem;
    margin-right: 7rem;
    color: #000;
}

.remove-btn {
    background: none;
    border: none;
    color: #888;
    font-size: 1rem;
    cursor: pointer;
}

.total {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-top: 1rem;
}

.total p {
    font-size: 1.2rem;
    margin: 0;
}

.checkout-btn {
    padding: 0.5rem 1rem;
    border: 1px solid #000;
    background: #fff;
    cursor: pointer;
    margin-left: 20px;
    transition: background-color 0.3s;
}

/* Utilities */
.text-sm {
    font-size: 0.9rem;
}

/* Media Queries */
@media (max-width: 480px) {
    .cart-icon {
        margin-right: 40px;
    }
    .cart-item img {
        max-width: 60px;
    }

    .cart-item {
        display: flex;
    }

    .item-name {
        width: 150px;
        margin-left:6px;
        font-size: 0.85rem;
        margin-bottom: 5px;
    }

    .total button {
        position: absolute;
        left: 50px;
        bottom: 100px;
        width: 300px;
        padding: auto;
    }
    
    .total p {
        margin-right: 50px;
        font-size: 1rem;
        font-weight: 700;
    }

    a .checkout-btn {
        width: 400px;
        position: fixed;
        left: 0;
        bottom: 0;
        margin-left: 0;
        background-color:#172c50;
        color: #fff;
        padding: 20px 0 20px;
        font-size: medium;
        font-weight: 700;
        text-align: center;
    }

    h1.text-lg {
        font-size: 1.5rem;
    }

    .cart h2 {
        font-size: 1.1rem;
    }

    .item-details {
        display: flex;
        flex-direction: column;
        width: 100%;
        overflow-x: hidden;
        gap: 10px;
        justify-content: center;
        
    }

    .product-details {
        display: flex;
        margin-left: 10px;
        gap: 10px;
    }

    .cart-item button {
        position: absolute;
        right:70px;
        top: 165px;
        
    }
}

